# SPTModManagerWeb

./: LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
src/spt_mod_manager_web/: main.py
